--- a/src/compiler/tsconfig.json
+++ b/src/compiler/tsconfig.json
@@ -42,6 +42,7 @@
         "binder.ts",
         "symbolWalker.ts",
         "checker.ts",
+        "deno.ts",
         "visitorPublic.ts",
         "sourcemap.ts",
         "transformers/utilities.ts",
